# BoxSwap

./: next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.next/: app-build-manifest.json  react-loadable-manifest.json  trace
.next/server/: _rsc_components_Navigation_tsx.js  _rsc_components_WalletProviders_tsx.js  app-paths-manifest.json  middleware-react-loadable-manifest.js  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: _not-found_client-reference-manifest.js  not-found.js  not-found_client-reference-manifest.js  page.js  page_client-reference-manifest.js
.next/server/vendor-chunks/: @coral-xyz.js  @ledgerhq.js  @mdx-js.js  @noble.js  @project-serum.js  @radix-ui.js  @solana-mobile.js  @solana.js  @solflare-wallet.js  @ungap.js  @wallet-standard.js  acorn-jsx.js  acorn.js  astring.js  bail.js  base-x.js  base64-js.js  bigint-buffer.js  bignumber.js.js  bindings.js  bn.js.js  borsh.js  bs58.js  (+127 more)
app/: ClientLayout.tsx  ClientProvider.tsx  globals.css  layout.tsx  page.tsx
app/components/: Footer.tsx  Layout.tsx
app/liquidity/: page.tsx
app/pool/: page.tsx
app/stake/: page.tsx
app/swap/: page.tsx
components/: Navigation.tsx  NovatrixBackground.tsx  PriceInfo.tsx  SwapSettings.tsx  TokenSelector.tsx  WalletProviders.tsx
idl/: liquidity_pool.json
programs/token_manager/: Cargo.toml
programs/token_manager/src/: lib.rs
scripts/: deploy.sh  deploy_token_manager.ts
solana-liquidity-pool/: package-lock.json  package.json
solana-liquidity-pool/app/: page.tsx
(+234 files in other folders)
